# HinaViewer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
HinaGUI/: CMakeLists.txt  HinaViewer.cpp  HinaViewer.h
HinaGUI/base/: DescInitable.cpp  DescInitable.h  camera.h  defines.cpp  defines.h  desc_initable.cpp  mesh.h  particle.h  particles.h  renderable.h  window.h
HinaGUI/builtin-desc/: classic_viewer.json
HinaGUI/components/menu/: classic_menu.cpp  classic_menu.h
HinaGUI/core/: Window.cpp  Window.h  defines.h  light.h  mesh.h  particles.h  particles_pool.h  renderable.h  shader.h  texture.h  triangle_model.cpp  triangle_model.h  window.cpp  window.h  window1.cpp  window_opengl.h
HinaGUI/geometry/: mesh_triangles.cpp  mesh_triangles.h  particles_immutable.cpp  particles_immutable.h  triangle_model.cpp  triangle_model.h
HinaGUI/impl_opengl/: glsl_shader.cpp  glsl_shader.h  renderable_opengl.cpp  renderable_opengl.h  shader_glsl.cpp  shader_glsl.h  texture_glsl.cpp  texture_glsl.h  window_opengl.cpp  window_opengl.h
HinaGUI/util/: desc_initable.h  model_loader.cpp  model_loader.h
cmake/: check_platform.cmake  mymacros.cmake
libimgui/: CMakeLists.txt  implot.cpp
samples/: CMakeLists.txt
samples/sample01/: fs_sample01.sc  main.cpp  vs_sample01.sc
samples/sample03/: main.cpp  main.h
samples/sample2/: main.cpp
samples/sample3/: 1.json  main.cpp
samples/sample4/: main.cpp
samples/sample5/: main.cpp
src/: CMakeLists.txt  IRenderable.h  api_imgui.cpp  api_imgui.h  mesh.h  particles_pool.h  rendering_backend.cpp  rendering_backend.h  vertex.cpp  vertex.h
